# stow

./: .env.example  .gitignore  .markdownlint.jsonc  CONTEXT.md  QA_CHECKLIST.md  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/scripts/: apply_fy_cutover.py  chat.py  reconcile_opening_balances.py  repair_fy_assignments.py  run_scenario.py  run_tests.sh
backend/src/agent/: activity.py  agent.py  deps.py  history.py  orchestrator.py  tool_errors.py  upi_matching.py
backend/src/agent/subagents/: account.py  import_agent.py  investment.py  recurring.py  (+2 more)
backend/src/stow/: ai_agent.py  ai_config.py  config.py  db.py  depreciation.py  fy_repair.py  fy_resolution.py  import_parsers.py  import_pipeline.py  main.py  migrations.py  models.py  recurring.py  scheduler.py  seed.py  telegram_config.py  transaction_numbers.py
backend/tests/: conftest.py  helpers.py  load_env.py  test_account_groups.py  test_accounts.py  test_agent_orchestrator.py  test_agent_tools.py  test_ai.py  test_audit_and_filters.py  test_chat.py  test_db.py  test_depreciation.py  test_fds.py  test_fy_resolution.py  test_health.py  test_history.py  test_imports.py  test_investments.py  test_opening_balance.py  test_prices.py  test_proposal.py  test_recurring.py  test_reports.py  test_scheduler.py  test_seed.py  test_settings.py  test_telegram.py  test_telegram_config.py  test_tool_errors.py  test_transactions.py  test_upi_matching.py
backend/tests/integration/: agent_harness.py  conftest.py  scenario_assertions.py  scenario_runner.py  scenarios.py  test_agent_scenarios.py  test_price_connectors.py
(+141 files in other folders)
