[project]
name = "stow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Palash Jain", email = "palash.jain@contractor.clickup.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
