[project]
name = "stow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "testcontainers>=4.9",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
