[project]
name = "stow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "psycopg2-binary>=2.9",
    "weasyprint>=62",
    "jinja2>=3.1",
    "httpx>=0.28",
    "yfinance>=0.2",
    "apscheduler>=4.0.0a1",
    "pydantic-ai>=0.0.14",
    "tomli-w>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "testcontainers>=4.9",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: calls real external APIs — run with --run-integration",
]
